[package]
name = "rnapkin"
version = "0.3.8"
edition = "2021"
authors = ["ukmrs <murias.wstork@gmail.com>"]
repository = "https://github.com/ukmrs/rnapkin"
license = "MIT"
exclude = ["atelier/"]
keywords = ["rna", "secondary_structure", "bioinformatics", "fold", "draw"]
categories = ["command-line-utilities", "science"]
description = "CLI utility for drawing RNA secondary structure"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "rnapkin"


[dependencies]
anyhow = "1.0.68"
atty = "0.2.14"
clap = { version = "4.0.32", features = ["derive"] }
plotters = "0.3.4"
